# NimbleFlight

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  index.html  itm.txt
assets/css/: 0.styles.8058417e.css
assets/js/: 11.2bb42653.js  13.145f9576.js  7.d8911d31.js  8.2e59a768.js  app.f46986e7.js
blog/: day0.html  day0.md  day1.html  day1.md  day2.html  day2.md  day3.html  index.html  index.md
docs/: index.html
docs/blog/: day2.md  day3.md  index.md
docs/stm32f3discovery/notes/: GPIO.md  USART.md
flight-controller/: Cargo.toml  Dockerfile  Makefile  memory.x  openocd.gdb
flight-controller/.cargo/: config.toml
flight-controller/scripts/: flash.cfg
flight-controller/src/: l3g4250d.rs  logger.rs  lsm303agr.rs
groundstation/: Dockerfile  package-lock.json  package.json
groundstation/app/: index.html  index.js  package-lock.json  package.json  tailwind.config.js
groundstation/app/src/: 3d_orientation.js  camera.js  command_prompt.js  gps_map.js
groundstation/app/src/charts/: acceleration.js  altitude.js  gyroscope.js  magnetometer.js  orientation.js
groundstation/hardware/Groundstation/: Groundstation.ino
groundstation/hardware/IBusTest/: IBusTest.ino  ibus.jl  ibus_serial_out.hex  ibus_serial_out.json  log.py  notes.md  parse.py
groundstation/src/: main.js
scripts/: flash.cfg
src/: l3g4250d.rs  l3gd20.rs  logger.rs  lsm303agr.rs  main.rs
website/: .gitignore  deploy.sh  index.md  package.json
website/.vuepress/: config.js
website/blog/: day0.md  day1.md  day2.md  day3.md  index.md
website/docs/: index.md
